--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "acceso-escuela-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "API para el acceso a escuelas TECS",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -19,7 +19,10 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "node-datetime": "^2.1.2",
-    "nodemon": "^2.0.6",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6",
+    "dotenv": "^8.2.0"
   }
 }
